tests/lit/tcheck/shadowing_01.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2023-2025 Intel Corporation

function F(x : Integer)
begin
    var x := 42;
// CHECK: Type error: variable `x` previously declared
end
